# loanpedia-batch

./: .dockerignore  .env.example  .gitallowed  .gitignore  AGENT.md  CLAUDE.md  README.md  ai_processing_batch.py  deploy.sh  docker-compose.yml  dockerfile  gitignore  main.py  mycarplus_s.txt  pdf_scraper.py  product_integration_batch.py  pyproject.toml  pytest.ini  requirements.txt  run_aomori_shinkumi.py  run_pipeline.py  template.yaml  test-lambda.sh  test_db_connection.py  touou_shinkin_result_20250916_205444.json  touou_shinkin_result_20250917_201904.json  touou_shinkin_result_20250917_202408.json  touou_shinkin_result_20250917_203918.json  touou_shinkin_result_20250917_204341.json  touou_shinkin_result_20250917_204940.json
.claude/: settings.local.json
.github/: pull_request_template.md
.serena/: project.yml
database/: loan_database.py  loan_service.py
docs/: agent-guide.md  ai-summary-format.md  api-specification.md  architecture.md  aurora-dataapi-setup.md  data-model.md  features-overview.md  figma-prompt.md  frontend-architecture.md  frontend-coding-guide.md  frontend-setup.md  process-flow.md  requirements.md  screen-specification.md  setup-instructions.md  vision.md
events/: aoimori_shinkin_test.json  aomori_michinoku_test.json
frontend/: .eslintrc.cjs  README.md  eslint.config.js  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
handlers/: aoimori_shinkin.py  aomori_shinkin.py  aomorimitinoku_bank.py  toshin_shinkin.py
infra/: .gitignore  .prettierignore  README.md  cdk.context.json  cdk.json  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
loanpedia-batch-main/: docker-compose.yml  dockerfile  gitignore  requirements.txt
loanpedia_scraper/: .samignore  app.py  (+9 more)
(+292 files in other folders)
