[project]
name = "loanpedia-batch"
version = "0.1.0"
description = "金融機関ローン情報収集バッチシステム"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "awscli-local==0.22.0",
    "beautifulsoup4==4.12.3",
    "boto3==1.34.131",
    "botocore==1.34.131",
    "localstack-client==2.5",
    "moto==5.0.8",
    "mypy==1.10.1",
    "pymysql==1.1.1",
    "pypdf2==3.0.1",
    "pytest==8.2.2",
    "pytest-timeout==2.3.1",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "python-dotenv==1.0.1",
    "requests>=2.32.4",
    "scrapy==2.11.2",
    "selenium==4.23.1",
    "sqlalchemy==2.0.31",
    "types-requests==2.32.0.20240712",
    "urllib3>=2.5.0",
    "pydantic>=2.6,<3",
    "pdfplumber>=0.11,<0.12",
    "pillow>=10,<11",
    "pypdfium2>=4,<5",
    "pytesseract>=0.3.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["loanpedia_scraper"]

[dependency-groups]
dev = [
    "moto>=5.0.8",
    "mypy>=1.10.1",
    "pip-audit>=2.6.1",
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "types-requests>=2.32.0.20240712",
    "types-beautifulsoup4>=4.12.0.20240511",
    "types-PyMySQL>=1.1.0.20240524",
]

[tool.scrapy]
settings_module = "loanpedia_scraper.src.settings"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
ignore_missing_imports = true
show_error_codes = true
